Made renamer to work solution wide
Lots of refactoring as well

--- a/VisualStudioProjectRenamer/VSPRCommon/VSPRCommon.csproj
+++ b/VisualStudioProjectRenamer/VSPRCommon/VSPRCommon.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Proxy.cs" />
     <Compile Include="RenameContext.cs" />
     <Compile Include="Settings.cs" />
+    <Compile Include="StringExtensions.cs" />
     <Compile Include="Utf8StreamWriter.cs" />
   </ItemGroup>
   <ItemGroup>
